# occlum

./: .all-contributorsrc  .astylerc  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  LICENSE  LICENSE.md  Makefile  README.md  TODO.md  buildenv.mk  codecov.yml  index.md
demos/hello_cc/: CMakeLists.txt  Makefile  README.md  hello_world.cc
demos/remote_attestation/: CMakeLists.txt  README.md  download_and_build.sh  run_on_occlum.sh
demos/remote_attestation/app/: ra_config.h  ra_main.cpp
demos/remote_attestation/azure_attestation/: README.md
demos/remote_attestation/azure_attestation/maa_attestation/: README.md  bom.yaml  build.sh
demos/remote_attestation/azure_attestation/maa_init/: README.md  bom.yaml  build.sh  init_maa.yaml
demos/remote_attestation/azure_attestation/maa_json/: README.md  run.sh
demos/remote_attestation/conf/: ra_config.example.json
demos/remote_attestation/dcap/: Makefile  README.md  dcap-musl.yaml  dcap.yaml  get_quote_on_ppml.sh  run_dcap_demo_on_occlum.sh  run_dcap_quote_on_occlum.sh
demos/remote_attestation/dcap/c_app/: Makefile  dcap_c_test.c  dcap_quote.h
demos/remote_attestation/dcap/dcap_lib/: Cargo.toml
demos/remote_attestation/dcap/include/: quote_generation.h  quote_verification.h
demos/remote_attestation/dcap/src/: main.c  quote_generation.c  quote_verification.c
demos/remote_attestation/dcap_fs/: README.md  build_and_run.sh  dcap.yaml
demos/remote_attestation/dcap_fs/c_app/: Makefile  dcap_fs.c
demos/remote_attestation/epid/: .gitignore  CMakeLists.txt  README.md  download_and_build.sh  run_on_occlum.sh
demos/remote_attestation/epid/app/: ra_config.h  ra_main.cpp
demos/remote_attestation/epid/conf/: ra_config.json
demos/remote_attestation/init_aecs_client/: README.md  app.yaml  build.sh
demos/remote_attestation/init_ra_flow/: README.md  build_content.sh  flask.yaml  gen-cert.sh  init_ra_client.yaml  ra_server.yaml  run.sh  run_till_ready.sh
demos/remote_attestation/init_ra_flow/init_ra/: Cargo.toml  build.rs
demos/remote_attestation/lib/src/: ra_device.cpp  ra_ias.cpp  ra_json.cpp  ra_manager.cpp  ra_report.cpp
demos/remote_attestation/maa/: README.md  maa.yaml  run.sh
demos/remote_attestation/maa/config/: Occlum.json  Occlum_prodid.json  Occlum_securityversion.json
demos/remote_attestation/maa/gen_quote/: gen_maa_json.c
src/exec/: Cargo.toml  Makefile  build.rs  occlum_exec.proto  rust-toolchain
src/exec/src/: .gitignore  lib.rs  server.rs
src/libos/: Cargo.toml  Enclave.lds  Enclave_config.xml  Makefile
src/libos/crates/: Cargo.toml  common.mk
src/libos/crates/async-file/: .gitignore  Cargo.toml  README.md
src/libos/crates/async-io/: Cargo.toml
src/libos/crates/async-mountfs/: Cargo.toml
src/libos/crates/async-rt/: Cargo.toml  README.md
src/libos/crates/async-sfs/: Cargo.toml
src/libos/crates/async-socket/: .gitignore  Cargo.toml  README.md
src/libos/crates/async-unionfs/: Cargo.toml
src/libos/crates/async-vfs/: Cargo.toml
src/libos/crates/block-device/: Cargo.toml  README.md
src/libos/crates/errno/: Cargo.toml
src/libos/crates/host-disk/: Cargo.toml
src/libos/crates/host-socket/: Cargo.toml
src/libos/crates/inherit-methods-macro/: Cargo.toml
src/libos/crates/io-uring-callback/: Cargo.toml  README.md
src/libos/crates/jindisk/: Cargo.toml  README.md
src/libos/crates/keyable-arc/: Cargo.toml
src/libos/crates/new-self-ref-arc/: Cargo.toml
src/libos/crates/object-id/: Cargo.toml
src/libos/crates/page-cache/: Cargo.toml
src/libos/crates/sgx-disk/: Cargo.toml  README.md
src/libos/crates/sgx-untrusted-alloc/: Cargo.toml  README.md
src/libos/crates/test/: host_run_async_file_example.sh  host_run_async_socket_example.sh  host_run_io_uring_callback_example.sh  host_run_io_uring_example.sh  sgx_run_async_file_example.sh  sgx_run_async_socket_example.sh  sgx_run_io_uring_callback_example.sh  sgx_run_io_uring_example.sh
src/libos/crates/vdso-time/: Cargo.toml  README.md
src/libos/include/: errno.h  invoke_main.h  syscall.h  syscall_nr.h  task.h
src/libos/include/edl/: occlum_edl_types.h
src/libos/src/: config.rs  elf_helper.rs  entry.rs  errno.h  errno.rs  exceptions.c  file.rs  file_table.rs  fs.rs  init_stack.rs  invoke_main.c  io_uring.rs  lib.rs  mm.rs  prelude.rs  process.rs  syscall.h  syscall.rs  syscall_entry.c  syscall_entry_x86-64.S  syscall_nr.h  task.c  task.h  vma.rs
src/libos/src/blk/: dev_disk.rs  mod.rs  raw_disk.rs
src/libos/src/builtin/: conf_get_hardcoded_file_mac.c  vm_get_preallocated_user_space_memory.c
src/libos/src/entry/: enclave.rs  mod.rs  syscall.rs  thread.rs
src/libos/src/error/: backtrace.rs  errno.rs  error.rs  mod.rs  to_errno.rs
src/libos/src/events/: edge_waiter.rs  event.rs  host_event_fd.rs  level_waiter.rs  mod.rs  notifier.rs  observer.rs  poller.rs  waiter.rs  waiter_queue.rs  waiter_queue_observer.rs
src/libos/src/exception/: cpuid.rs  mod.rs  rdtsc.rs  syscall.rs
src/libos/src/fs/: access.rs  async_file_handle.rs  async_fs.rs  builtin_disk.rs  channel.rs  dentry.rs  dev_null.rs  dev_random.rs  dev_sgx.rs  dev_zero.rs  disk_file.rs  event_file.rs  events.rs  fcntl.rs  file.rs  file_flags.rs  file_handle.rs  file_table.rs  fs_view.rs  fspath.rs  host_fd.rs  hostfs.rs  inode_file.rs  inode_handle.rs  io_multiplexing.rs  mod.rs  null.rs  pipe.rs  root_inode.rs  rootfs.rs  sgx_impl.rs  socket_file.rs  stdio.rs  sync_fs_wrapper.rs  syscalls.rs  timer_file.rs  unix_socket.rs
src/libos/src/interrupt/: mod.rs  sgx.rs
src/libos/src/ipc/: mod.rs  shm.rs  syscalls.rs
src/libos/src/misc/: coverage.rs  mod.rs  random.rs  rlimit.rs  rusage.rs  sysinfo.rs  uname.rs
tools/copy_bom/: .gitignore  Cargo.toml  Makefile  README.md  example.yaml
tools/copy_bom/src/: bom.rs  error.rs  main.rs  util.rs
tools/gen_internal_conf/: Cargo.toml  Makefile
tools/gen_internal_conf/src/: main.rs
tools/init_aecs/: Cargo.toml  Makefile  build.rs
tools/init_aecs/src/: main.rs
tools/occlum-bom/bom_core/: Cargo.toml
tools/toolchains/dcap_lib/: Cargo.toml  build.sh
(+2000 files in other folders)
