CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
PROJECT(HELLO_WORLD LANGUAGES CXX VERSION 0.0.1)
SET(SRC_LIST "hello_world.cc")
MESSAGE(STATUS "This is BINARY dir " ${HELLO_WORLD_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir " ${HELLO_WORLD_SOURCE_DIR})
ADD_EXECUTABLE(hello_world ${SRC_LIST})
