[package]
name = "gen_internal_conf"
version = "0.2.0"
authors = ["zongmin.gu <zongmin.gzm@alibaba-inc.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
ms_buffer = []

[dependencies]
clap            = "2.33"
serde           = "1.0"
serde_json      = "1.0"
serde_derive    = "1.0"
log             = "0.4"
env_logger      = "0.7"
serde-xml-rs    = "0.4"
regex           = "1"
lazy_static     = "1.4.0"
