[workspace]

members = [
    "async-io",
    "async-mountfs",
    "async-rt",
    "async-sfs",
    "async-socket",
    "async-unionfs",
    "async-vfs",
    "block-device",
    "errno",
    "inherit-methods-macro",
    "io-uring-callback",
    "jindisk",
    "keyable-arc",
    "new-self-ref-arc",
    "object-id",
    "page-cache",
    "sgx-disk",
    "sgx-untrusted-alloc",
    "vdso-time"
]

# Default members can run on Linux; non-default members can only run inside SGX.
default-members = [
    "async-io",
    "async-mountfs",
    "async-rt",
    "async-sfs",
    "async-socket",
    "async-unionfs",
    "async-vfs",
    "block-device",
    "inherit-methods-macro",
    "io-uring-callback",
    "jindisk",
    "keyable-arc",
    "new-self-ref-arc",
    "object-id",
    "page-cache",
    "sgx-disk",
    "vdso-time"
]

exclude = [ 
    "test",
]
