[package]
name = "bom_core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.5"
data-encoding = "2.3.2"
regex = "1.5.4"
lazy_static = "1.4.0"
toml = "0.5.8"
serde_derive = "1.0.126"
serde = "1.0.126"
