[package]
name = "async-file"
version = "0.1.0"
authors = ["Tate, Hongliang Tian <tate.thl@antfin.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["libc"]
sgx = [
    "sgx_types",
    "sgx_tstd",
    "sgx_trts",
    "sgx_libc",
    "io-uring-callback/sgx",
    "async-rt/sgx",
    "async-io/sgx",
    "sgx-untrusted-alloc"
]

[dependencies]
array-init = "1.0"
atomic = "0.5"
futures = { version = "0.3", default-features = false, features = ["alloc"]  }
intrusive-collections = "0.9"
itertools = { version = "0.10", default-features = false, features = ["use_alloc"] }
io-uring-callback = { path = "../io-uring-callback" }
async-rt = { path = "../async-rt", features = ["auto_run"] }
async-io = { path = "../async-io" }
libc = { version = "0.2", optional = true }
sgx_types = { path = "../../../../deps/rust-sgx-sdk/sgx_types", optional = true }
sgx_tstd = { path = "../../../../deps/rust-sgx-sdk/sgx_tstd", optional = true, features = ["backtrace"] }
sgx_trts = { path = "../../../../deps/rust-sgx-sdk/sgx_trts", optional = true }
sgx_libc = { path = "../../../../deps/rust-sgx-sdk/sgx_libc", optional = true }
sgx-untrusted-alloc = { path = "../sgx-untrusted-alloc", optional = true }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

[dev-dependencies]
ctor = "0.1"
lazy_static = "1.4"
