[package]
name = "async-io"
version = "0.1.0"
authors = ["Tate, Hongliang Tian <tate.thl@antfin.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["libc"]
sgx = ["sgx_types", "sgx_tstd", "sgx_trts", "sgx_libc", "async-rt/sgx"]

[dependencies]
async-rt = { path = "../async-rt" }
atomic = "0.5"
bitflags = "1.2"
downcast-rs = { version = "1.2.0", default-features = false }
errno = { path = "../errno" }
futures = { version = "0.3", default-features = false, features = ["alloc"]  }
libc = { version = "0.2", optional = true }
object-id = { path = "../object-id" }
ringbuf = { version = "0.2.3", default-features = false }
spin = "0.7"

sgx_types = { path = "../../../../deps/rust-sgx-sdk/sgx_types", optional = true }
sgx_tstd = { path = "../../../../deps/rust-sgx-sdk/sgx_tstd", optional = true, features = ["backtrace"] }
sgx_trts = { path = "../../../../deps/rust-sgx-sdk/sgx_trts", optional = true }
sgx_libc = { path = "../../../../deps/rust-sgx-sdk/sgx_libc", optional = true }
rcore-fs = { path = "../../../../deps/sefs/rcore-fs" }

[dev-dependencies]
async-rt = { path = "../async-rt", features = ["auto_run"] }
ctor = "0.1"
lazy_static = "1.4"
