[package]
name = "async-rt"
version = "0.1.0"
authors = ["Tate, Hongliang Tian <tate.thl@antfin.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["vdso-time/std", "use_latency", "libc"]
auto_run = ["env_logger"]
use_latency = []
sgx = ["sgx_tstd", "flume/sgx", "vdso-time/sgx", "hierarchical_hash_wheel_timer/sgx", "sgx_types", "sgx_libc", "sgx-untrusted-alloc"]

[dependencies]
cfg-if = "1.0"
atomic = "0.5"
libc = { version = "0.2", optional = true }
bit-vec = { version = "0.6", default-features = false }
errno = { path = "../errno" }
flume = { path = "../../../../deps/flume", default-features = false }
futures = { version = "0.3", default-features = false, features = ["alloc", "async-await"] }
hierarchical_hash_wheel_timer = { path = "../../../../deps/rust-hash-wheel-timer", default-features = false, features = ["sip-hash"]}
intrusive-collections = "0.9"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = "0.4"
env_logger = { version = "0.9", optional = true }
new-self-ref-arc = { path = "../new-self-ref-arc" }
object-id = { path = "../object-id" }
spin = "0.7"
sgx_tstd = { path = "../../../../deps/rust-sgx-sdk/sgx_tstd", features = ["backtrace", "thread"], optional = true }
vdso-time = { path = "../vdso-time", default-features = false }
sgx-untrusted-alloc = { path = "../sgx-untrusted-alloc", optional = true }
sgx_types = { path = "../../../../deps/rust-sgx-sdk/sgx_types", optional = true }
sgx_libc = { path = "../../../../deps/rust-sgx-sdk/sgx_libc", optional = true }

[dev-dependencies]
ctor = "0.1"
