[package]
name = "async-sfs"
version = "0.1.0"
authors = ["Li Qing <geding.lq@antgroup.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["libc", "lru/default", "page-cache/default"]
sgx = ["sgx_types", "sgx_tstd", "sgx_trts", "sgx_libc", "async-vfs/sgx", "async-io/sgx", "async-rt/sgx", "page-cache/sgx", "lru/sgx"]

[dependencies]
async-vfs = { path = "../async-vfs" }
async-io = { path = "../async-io" }
async-rt = { path = "../async-rt" }
errno = { path = "../errno" }
block-device = { path = "../block-device" }
page-cache = { path = "../page-cache", default-features = false }
async-trait = "0.1.52"
static_assertions = "0.3"
log = "0.4"
cfg-if = "1.0"
lru = { path = "../../../../deps/lru-rs", default-features = false }
libc = { version = "0.2", optional = true }
bitvec = { version = "0.17", default-features = false, features = ["alloc"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

sgx_types = { path = "../../../../deps/rust-sgx-sdk/sgx_types", optional = true }
sgx_tstd = { path = "../../../../deps/rust-sgx-sdk/sgx_tstd", optional = true, features = ["backtrace"] }
sgx_trts = { path = "../../../../deps/rust-sgx-sdk/sgx_trts", optional = true }
sgx_libc = { path = "../../../../deps/rust-sgx-sdk/sgx_libc", optional = true }

[dev-dependencies]
async-rt = { path = "../async-rt", features = ["auto_run"] }
sgx-disk= { path = "../sgx-disk" }
