[package]
name = "async-vfs"
version = "0.1.0"
authors = ["Li Qing <geding.lq@antgroup.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["libc", "lru/default"]
sgx = ["sgx_types", "sgx_tstd", "sgx_trts", "sgx_libc", "async-io/sgx", "async-rt/sgx", "lru/sgx"]

[dependencies]
async-trait = "0.1.52"
async-recursion = "1.0.4"
async-rt = { path = "../async-rt" }
cfg-if = "1.0"
log = "0.4"
libc = { version = "0.2", optional = true }
async-io = { path = "../async-io" }
errno = { path = "../errno" }
keyable-arc = { path = "../keyable-arc" }
lru = { path = "../../../../deps/lru-rs", default-features = false }
lazy_static = { version = "1.1.0", features = ["spin_no_std"] }
bitflags = "1.0"

sgx_types = { path = "../../../../deps/rust-sgx-sdk/sgx_types", optional = true }
sgx_tstd = { path = "../../../../deps/rust-sgx-sdk/sgx_tstd", optional = true, features = ["backtrace"] }
sgx_trts = { path = "../../../../deps/rust-sgx-sdk/sgx_trts", optional = true }
sgx_libc = { path = "../../../../deps/rust-sgx-sdk/sgx_libc", optional = true }

[dev-dependencies]
async-rt = { path = "../async-rt", features = ["auto_run"] }
