[package]
name = "block-device"
version = "0.1.0"
authors = ["Tate, Hongliang Tian <tate.thl@antgroup.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errno = { path = "../errno" }
object-id = { path = "../object-id" }
spin = "0.7"

[dev-dependencies]
async-rt = { path = "../async-rt", features = ["auto_run"] }
