[package]
name = "inherit-methods-macro"
version = "0.1.0"
authors = ["Tate, Hongliang Tian <tate.thl@antgroup.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.27"
syn = { version = "1.0.73", features = ["full", "extra-traits", "parsing"] }
quote = "1.0.9"
darling = "0.13.0"