[package]
name = "io-uring-callback"
version = "0.1.0"
authors = ["Tate, Hongliang Tian <tate.thl@antfin.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["libc"]
sgx = ["sgx_types", "sgx_tstd", "sgx_trts", "sgx_libc", "io-uring/sgx"]

[dependencies]
atomic = "0.5.0"
futures = { version = "0.3", default-features = false, features = ["alloc"]  }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
slab = { git = "https://github.com/tokio-rs/slab.git", default-features = false }
libc = { version = "0.2.0", optional = true }

io-uring = { path = "../../../../deps/io-uring", features = ["concurrent"]  }
sgx_types = { path = "../../../../deps/rust-sgx-sdk/sgx_types", optional = true }
sgx_tstd = { path = "../../../../deps/rust-sgx-sdk/sgx_tstd", optional = true, features = ["backtrace"] }
sgx_trts = { path = "../../../../deps/rust-sgx-sdk/sgx_trts", optional = true }
sgx_libc = { path = "../../../../deps/rust-sgx-sdk/sgx_libc", optional = true }

[dev-dependencies]
tempfile = "3"
