[package]
name = "io-uring-callback"
version = "0.1.0"
authors = ["Tate, Hongliang Tian <tate.thl@antfin.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["libc"]
sgx = ["sgx_tstd", "sgx_libc", "io-uring/sgx"]

[dependencies]
atomic = "0.5.0"
cfg-if = "1.0.0"
lock_api = "=0.4.2"
log = "0.4"
futures = { version = "0.3", default-features = false, features = ["alloc"]  }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
slab = { version = "0.4.5", default-features = false }
libc = { version = "0.2", optional = true }

io-uring = { path = "../../../../deps/io-uring", features = ["unstable"]  }
sgx_tstd = { path = "../../../../deps/rust-sgx-sdk/sgx_tstd", optional = true, features = ["backtrace"] }
sgx_libc = { path = "../../../../deps/rust-sgx-sdk/sgx_libc", optional = true }
spin = "0.7"

[dev-dependencies]
tempfile = "3"
