[package]
name = "jindisk"
version = "0.1.0"
authors = ["Song Shaowei <songshaowei.ssw@antgroup.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["libc", "errno/std", "lru/default", "openssl"]
sgx = ["sgx_types", "sgx_tstd", "sgx_trts", "sgx_libc", "sgx_tcrypto", "sgx_alloc", "sgx_rand", "async-io/sgx", "async-rt/sgx", "errno/sgx", "lru/sgx"]

[dependencies]
async-trait = "0.1.52"
bitvec = { version = "1.0.1", default-features = false, features = ["alloc", "serde"]  }
cfg-if = "1.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
libc = { version = "0.2", optional = true }
log = "0.4"
lru = { path = "../../../../deps/lru-rs", default-features = false }
openssl = { version = "0.10.42", features = ["vendored"], optional = true }
spin = "0.7"
static_assertions = "1.1.0"

async-io = { path = "../async-io" }
async-rt = { path = "../async-rt" }
block-device = { path = "../block-device" }
errno = { path = "../errno" }
object-id = { path = "../object-id" }

sgx_types = { path = "../../../../deps/rust-sgx-sdk/sgx_types", optional = true }
sgx_tstd = { path = "../../../../deps/rust-sgx-sdk/sgx_tstd", optional = true, features = ["backtrace"] }
sgx_trts = { path = "../../../../deps/rust-sgx-sdk/sgx_trts", optional = true }
sgx_libc = { path = "../../../../deps/rust-sgx-sdk/sgx_libc", optional = true }
sgx_tcrypto = { path = "../../../../deps/rust-sgx-sdk/sgx_tcrypto", optional = true }
sgx_alloc = { path = "../../../../deps/rust-sgx-sdk/sgx_alloc", optional = true }
sgx_rand = { path = "../../../../deps/rust-sgx-sdk/sgx_rand", optional = true }

[dev-dependencies]
async-rt = { path = "../async-rt", features = ["auto_run"] }
sgx-disk = { path = "../sgx-disk" }

[lib]
doctest = false
