[package]
name = "new-self-ref-arc"
version = "0.1.0"
authors = ["Tate, Hongliang Tian <tate.thl@antgroup.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
sgx = ["sgx_tstd"]

[dependencies]
sgx_tstd = { path = "../../../../deps/rust-sgx-sdk/sgx_tstd", optional = true }